--- a/index.html
+++ b/index.html
@@ -125,10 +125,127 @@
         <p class="parg-orang2">Ми маємо великий досвід електроустановок для дому та бізнесу, тому жодна робота не надто
           мала. Наші клієнти цінують наш
           професіоналізм, трудову етику та конкурентоспроможні ціни.</p>
-        <div>
+      </div>
+
+      <div class="button-container">
+        <button class="button-click" onclick="showContent('button1')">
+          <img src="./img/icon/icon1.png" alt="Иконка 1" class="button-icon">
+          <span class="btn-text">Комерційний</span>
+        </button>
+        <button class="button-click" onclick="showContent('button2')">
+          <img src="./img/icon/icon2.png" alt="Иконка 1" class="button-icon">
+          <span class="btn-text">Житловий</span>
+        </button>
+        <button class="button-click" onclick="showContent('button3')">
+          <img src="./img/icon/icon3.png" alt="Иконка 1" class="button-icon">
+          <span class="btn-text">Індустріальний</span>
+        </button>
+
+        <div class="contentie-container" id="contentBlock">
+          <button class="">Нажми меня</button>
+        </div>
+      </div>
+    </section>
+
+    <section class="services container">
+      <div class="services-ours container">
+        <div class="servis container">
+          <img src="./img/sect3/foto1.png" width="22" height="25" alt="Маленькое изображение">
+          <p class="parg-servis">Зона обслуговування</p>
+        </div>
+        <h2 class="glavn-servis">Наші Послуги</h2>
+        <p class="paragr-servis">Ми пропонуємо повний спектр електротехнічних послуг для житлових і комерційних
+          приміщень за розумною ціною.</p>
+      </div>
+      </div>
+
+      <div class="column-section">
+        <div class="column">
+          <img class="img-column" src="./img/icon-column/foto2.png" width="40" height="40" alt="Air condition service">
+          <h3 class="glavn-column">Сервіс кондиціонерів</h3>
+          <p class="paragr-column">Сервіси здатні обслуговувати всю вашу електричну інфраструктуру за допомогою
+            тепловізійної камери вашого повітря з
+            розподільних щитів.</p>
+        </div>
+        <div class="column">
+          <img class="img-column" src="./img/icon-column/foto3.png" width="40" height="40" alt="Air condition service">
+          <h3 class="glavn-column">Електромонтаж</h3>
+          <p class="paragr-column">Художні установи, які забезпечують усі необхідні електричні рішення для
+            вашого бізнесу, будинку чи промислових
+            приміщень.</p>
+        </div>
+        <div class="column">
+          <img class="img-column" src="./img/icon-column/foto4.png" width="40" height="40" alt="Air condition service">
+          <h3 class="glavn-column">Генеральний забудовник</h3>
+          <p class="paragr-column">Ми надаємо бездоганну оцінку безпеки як комерційних, так і житлових об’єктів. Наші
+            досвідчені та досвідчені електрики.</p>
+        </div>
+        <div class="column">
+          <img class="img-column" src="./img/icon-column/foto5.png" width="40" height="40" alt="Air condition service">
+          <h3 class="glavn-column">Система безпеки</h3>
+          <p class="paragr-column">Використовується для вимірювання потоку, рівня температури та тиску в виробничій
+            промисловості, щоб забезпечити
+            продуктивність.</p>
+        </div>
+        <div class="column">
+          <img class="img-column" src="./img/icon-column/foto6.png" width="40" height="40" alt="Air condition service">
+          <h3 class="glavn-column">Обслуговування та оплата</h3>
+          <p class="paragr-column">Електричні послуги можуть обслуговувати всю вашу електричну інфраструктуру за
+            допомогою тепловізора ваших комутаційних
+            щитів.</p>
+        </div>
+        <div class="column">
+          <img class="img-column" src="./img/icon-column/foto7.png" width="40" height="40" alt="Air condition service">
+          <h3 class="glavn-column">Розширення будинку</h3>
+          <p class="paragr-column">Традиційно електрика подається через опори повітряної мережі, де кабель підключається
+            до вашої будівлі.</p>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="image-textar-section">
+      <div class="imagesis-container">
+        <img src="./img/sect3/foto11.png" width="530" height="650" alt="Изображение">
+      </div>
+      <div class="textig-container">
+        <div class="us-wir">
+          <img class="img-wir" src="./img/sect3/foto1.png" width="22" height="25" alt="Air">
+          <p class="par-wir">Чому обирають нас?</p>
+        </div>
+        <h2 class="new-info-wir">Кілька причин, чому варто обрати нас</h2>
+        <p class="para-new-wir">Ми пропонуємо наступну інформацію про нас, що ми насправді робимо в секторі електрики.
+          Покращити життя наших клієнтів,
+          пропонуючи творчі та економічно ефективні рішення для їхніх потреб.</p>
+        <div class="boolst">
+          <div class="bolt">
+            <div class="garip">
+              <img src="./img/sect3/snak.jpg" alt="foto">
+              <p class="info-bolt">35 років досвіду</p>
+            </div>
+            <p class="info-bolt-parg">Ефективна комунікація – запорука успіху будь-якого бізнесу. Від співробітників
+              нашого офісу до нашої сфери.</p>
+          </div>
+          <div class="bolt">
+            <div class="garip">
+              <img src="./img/sect3/snak.jpg" alt="foto">
+              <p class="info-bolt">Сертифікат відмінності</p>
+            </div>
+            <p class="info-bolt-parg">Ми повністю розуміємо, що ваш час надзвичайно цінний. Ми прагнемо дотримуватись
+              термінів.</p>
+          </div>
+          <div class="bolt">
+            <div class="garip">
+              <img src="./img/sect3/snak.jpg" alt="foto">
+              <p class="info-bolt">Доступна ціна</p>
+            </div>
+            <p class="info-bolt-parg">Ми суворо дотримуємося чинного національного електротехнічного кодексу та
+              проводимо регулярні внутрішні сесії.</p>
+          </div>
 
         </div>
       </div>
+
     </section>
   </main>
 
@@ -136,9 +253,7 @@
     <!-- Подвал страницы -->
   </footer>
 
-  <script src="script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
-
-<li class="social-icn"><a href="#"></a>
