--- a/index.html
+++ b/index.html
@@ -207,6 +207,40 @@
     <section class="image-textar-section">
       <div class="imagesis-container">
         <img src="./img/sect3/foto11.png" width="530" height="650" alt="Изображение">
+        <div class="overlay">
+          <div class="content">
+            <div class="number-textar">
+              <span class="number">3956</span>
+            </div>
+            <div class="text-textar">
+              <p class="parag-textar">Проектів виконано</p>
+            </div>
+          </div>
+          <div class="content">
+            <div class="number-textar">
+              <span class="number">854</span>
+            </div>
+            <div class="text-textar">
+              <p class="parag-textar">Людей працюють</p>
+            </div>
+          </div>
+          <div class="content">
+            <div class="number-textar">
+              <span class="number">265</span>
+            </div>
+            <div class="text-textar">
+              <p class="parag-textar">Ділові партнери</p>
+            </div>
+          </div>
+          <div class="content">
+            <div class="number-textar">
+              <span class="number">2845+</span>
+            </div>
+            <div class="text-textar">
+              <p class="parag-textar">Щасливі клієнти</p>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="textig-container">
         <div class="us-wir">
@@ -247,6 +281,286 @@
       </div>
 
     </section>
+
+    <section class="image-grid-section">
+      <div class="drap">
+        <img src="./img/sect3/foto1.png" width="22" height="25" alt="Маленькое изображение">
+        <p class="parg-drap">Галерея</p>
+      </div>
+      <h2 class="text-drap">Наші останні проекти</h2>
+
+      <div class="imageli-drap">
+        <div class="imageli">
+          <img src="./img/sect3/foto22.jpg" width="250" height="280" alt="Изображение 1">
+          <div class="text">
+            <p class="text-pargone">Зміна оптоволоконного кабелю</p>
+            <p class="text-pargtho">Комерційний</p>
+          </div>
+        </div>
+        <div class="imageli">
+          <img src="./img/sect3/foto23.png" width="250" height="280" alt="Изображение 2">
+          <div class="text">
+            <p class="text-pargone">Проблема промислової машини</p>
+            <p class="text-pargtho">Промисловість</p>
+          </div>
+        </div>
+        <div class="imageli">
+          <img src="./img/sect3/foto24.jpg" width="250" height="280" alt="Изображение 3">
+          <div class="text">
+            <p class="text-pargone">Зміна та ремонт литого диска</p>
+            <p class="text-pargtho">Житловий</p>
+          </div>
+        </div>
+        <div class="imageli">
+          <img src="./img/sect3/foto25.png" width="250" height="280" alt="Изображение 4">
+          <div class="text">
+            <p class="text-pargone">Очищення та установа даху</p>
+            <p class="text-pargtho">Комерційний</p>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <section class="price-var container">
+      <div class="info-price">
+        <div class="price-plan">
+          <div class="text-price">
+            <div class="paragraf-price-ac">
+              <img src="./img/sect3/foto1.png" width="22" height="25" alt="foto">
+              <p class="smool-text">Ціновий план</p>
+            </div>
+            <h2 class="text-big-price">Налаштуємо роботу за доступною ціною</h2>
+          </div>
+          <p class="parg-price">Це пристрасть до зростання та нових можливостей у сфері електричних послуг. Ми маємо
+            великий досвід електроустановок для
+            дому та бізнесу, тому жодна робота не надто мала.</p>
+        </div>
+
+        <div class="plan-price">
+          <div class="block-price">
+            <div class="lime">
+              <div class="lime-pay">
+                <h3 class="plan-lime">Базовий план</h3>
+                <h3 class="plan-pay">$ 599.00</h3>
+              </div>
+              <p class="lime-prg">Плата за відвідування</p>
+            </div>
+            <div class="linia"></div>
+            <div class="text-price-vip">
+              <div class="block-vip">
+                <div class="foto-vip">
+                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                </div>
+                <p class="parg-vip">Електрообслуговування</p>
+              </div>
+              <div class="block-vip">
+                <div class="foto-vip">
+                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                </div>
+                <p class="parg-vip">Системи розподілу електроенергії</p>
+              </div>
+              <div class="block-vip">
+                <div class="foto-vip">
+                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                </div>
+                <p class="parg-vip">Висока та середня напруга</p>
+              </div>
+              <div class="block-vip">
+                <div class="foto-vip">
+                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                </div>
+                <p class="parg-vip">Промислові системи управління</p>
+              </div>
+              <div class="block-vip">
+                <div class="foto-vip">
+                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                </div>
+                <p class="parg-vip">Встановлення перемикача</p>
+              </div>
+              <div class="block-vip">
+                <div class="foto-vip">
+                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                </div>
+                <p class="parg-vip">Генераторні установки</p>
+              </div>
+              <div class="block-vip">
+                <div class="foto-vip">
+                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                </div>
+                <p class="parg-vip">Інноваційне будівництво</p>
+              </div>
+              <div class="button-vip-btn">
+                <button class="btn-vip">Купити зараз</button>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="block-price">
+            <div class="lime">
+              <div class="lime-pay">
+                <h3 class="plan-lime">Стандартний</h3>
+                <h3 class="plan-pay">$ 699.00</h3>
+              </div>
+              <p class="lime-prg">Плата за відвідування</p>
+            </div>
+            <div class="linia"></div>
+            <div class="text-price-vip">
+              <div class="block-vip">
+                <div class="foto-vip">
+                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                </div>
+                <p class="parg-vip">Елементи управління ПЛК</p>
+              </div>
+              <div class="block-vip">
+                <div class="foto-vip">
+                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                </div>
+                <p class="parg-vip">Конвеєрні системи</p>
+              </div>
+              <div class="block-vip">
+                <div class="foto-vip">
+                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                </div>
+                <p class="parg-vip">Ремонт електропроводки</p>
+              </div>
+              <div class="block-vip">
+                <div class="foto-vip">
+                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                </div>
+                <p class="parg-vip">Ремонт електричних водонагрівачів</p>
+              </div>
+              <div class="block-vip">
+                <div class="foto-vip">
+                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                </div>
+                <p class="parg-vip">Оновлення панелей</p>
+              </div>
+              <div class="block-vip">
+                <div class="foto-vip">
+                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                </div>
+                <p class="parg-vip">Ефективні освітлювальні рішення</p>
+              </div>
+              <div class="block-vip">
+                <div class="foto-vip">
+                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                </div>
+                <p class="parg-vip">Освітлення майданчика</p>
+              </div>
+              <div class="button-vip-btn">
+                <button class="btn-vip">Купити зараз</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="block-price">
+            <div class="lime">
+              <div class="lime-pay">
+                <h3 class="plan-lime">Професійний</h3>
+                <h3 class="plan-pay">$ 799.00</h3>
+              </div>
+              <p class="lime-prg">Плата за відвідування</p>
+            </div>
+            <div class="linia"></div>
+            <div class="text-price-vip">
+              <div class="block-vip">
+                <div class="foto-vip">
+                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                </div>
+                <p class="parg-vip">Монтаж кабельних лотків</p>
+              </div>
+              <div class="block-vip">
+                <div class="foto-vip">
+                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                </div>
+                <p class="parg-vip">Оновлення електропроводки</p>
+              </div>
+              <div class="block-vip">
+                <div class="foto-vip">
+                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                </div>
+                <p class="parg-vip">Енергоефективне освітлення</p>
+              </div>
+              <div class="block-vip">
+                <div class="foto-vip">
+                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                </div>
+                <p class="parg-vip">Аварійна генерація</p>
+              </div>
+              <div class="block-vip">
+                <div class="foto-vip">
+                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                </div>
+                <p class="parg-vip">Басейни та гідромасажні ванни</p>
+              </div>
+              <div class="block-vip">
+                <div class="foto-vip">
+                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                </div>
+                <p class="parg-vip">Блоки кондиціонування повітря</p>
+              </div>
+              <div class="block-vip">
+                <div class="foto-vip">
+                  <img src="./img/sect4/iconka.png" width="19" height="19" alt="fotosdf">
+                </div>
+                <p class="parg-vip">Генеруючі системи</p>
+              </div>
+              <div class="button-vip-btn">
+                <button class="btn-vip">Купити зараз</button>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="text-new-vip">
+          <div class="vip-pargar">
+            <div class="iconka-vip">
+              <img src="./img/sect3/snak.jpg" width="32" height="32" alt="foto">
+            </div>
+            <div class="text-vipar">
+              <p class="many-vip">Доступна ціна</p>
+              <p class="many-vip-prg">Ми дотримуємося чинного національного електротехнічного кодексу та
+                проводимо
+                регулярні внутрішні зустрічі з
+                нашими техніками для перегляду змін у кодексі та застосувань.</p>
+            </div>
+          </div>
+
+          <div class="vip-pargar">
+            <div class="iconka-vip">
+              <img src="./img/sect3/snak.jpg" width="32" height="32" alt="foto">
+            </div>
+            <div class="text-vipar">
+              <p class="many-vip">Фіксований план</p>
+              <p class="many-vip-prg">Ми повністю розуміємо, що ваш час надзвичайно цінний. Вам ніколи не доведеться
+                турбуватися про очікування наших навчених
+                техніків. Цілодобові постачальники послуг за доступною ціною.</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="section-qir container">
+      <div class="text-qir">
+        <h2 class="text-rossilka">Підпишіться на нашу розсилку</h2>
+        <p class="prg-rossilka">Залишайтеся на зв'язку з нами, щоб отримувати останні новини. Ми тут, щоб задовольнити
+          потреби ваших електричних послуг
+          для будівлі вашої мрії.</p>
+      </div>
+      <div class="email-block">
+        <form class="form-labil" action="subscribe.php" method="post">
+          <div class=" input-container">
+            <input class="text-form" type="email" id="emailInput" name="email" required>
+            <label class="labelli" for="email">Ваш Email</label>
+          </div>
+          <button class="subsraib" type="submit">Подписаться</button>
+        </form>
+      </div>
+    </section>
   </main>
 
   <footer>
@@ -254,6 +568,9 @@
   </footer>
 
   <script src="./js/script.js"></script>
+  <script src="./js/scrpt.js"></script>
+
+
 </body>
 
 </html>
