--- a/index.html
+++ b/index.html
@@ -563,8 +563,36 @@
     </section>
   </main>
 
-  <footer>
-    <!-- Подвал страницы -->
+  <footer class="footer-section">
+    <div class="footer-pidval">
+      <div class="footer-logo">
+        <div class="logo-box">
+          <img src="./img/footer-logo/footer-logo.png" alt="Логотип">
+        </div>
+        <div class="logo-adress-footer">
+
+          <div class="address-footer">
+            <img class="logo-email-footer" src="./img/logo/email.png" width="68" height="68" alt="Адрес 1">
+            <div class="emaill-footer">
+              <p class="parg-adres-footer">Напишіть нам
+                <a class="email-cont-footer" href="mailto:info@example.com">blueCollar@gmail.com</a>
+              </p>
+            </div>
+          </div>
+          <div class="address-footer">
+            <img class="logo-tell-footer" src="./img/logo/call.png" width="68" height="68" alt="Адрес 2">
+            <div class="teell-footer">
+              <p class="parg-adres-footer">Зателефонуйте
+                <a class="tell-cont-footer" href="tel:+1234567890">+38(099)9999999</a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+
+
+      </div>
+    </div>
   </footer>
 
   <script src="./js/script.js"></script>
