--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
   <main>
     <section class="sect-one container">
       <div class="logo">
-        <img src="./img/logo/logo.png" alt="Логотип">
+        <img class="logo-fotofra" src="./img/logo/logo.png" alt="Логотип">
       </div>
       <div class="logo-adress">
-
         <div class="address">
           <img class="logo-email" src="./img/logo/email.png" width="68" height="68" alt="Адрес 1">
           <div class="emaill">
@@ -80,7 +79,7 @@
       </div>
     </section>
 
-    <section id="about" class="image-text-section">
+    <section id="about" class="image-text-section container">
       <div class="image-container">
         <img src="./img/sect1/foto21.png" width="505" height="560" alt="Изображение">
       </div>
@@ -115,7 +114,7 @@
         </div>
       </div>
     </section>
-    <section id="poslyga" class="orang-section">
+    <section id="poslyga" class="orang-section container">
       <div class="new-info-container">
         <div class="text-orangas ">
           <img src="./img/sect1/foto22.png" alt="Маленькое изображение">
@@ -201,7 +200,7 @@
       </div>
     </section>
 
-    <section id="blog" class="image-textar-section">
+    <section id="blog" class="image-textar-section container">
       <div class="imagesis-container">
         <img src="./img/sect3/foto11.png" width="530" height="650" alt="Изображение">
         <div class="overlay">
@@ -239,7 +238,7 @@
           </div>
         </div>
       </div>
-      <div class="textig-container">
+      <div class="textig-container container">
         <div class="us-wir">
           <img class="img-wir" src="./img/sect3/foto1.png" width="22" height="25" alt="Air">
           <p class="par-wir">Чому обирають нас?</p>
@@ -279,7 +278,7 @@
 
     </section>
 
-    <section class="image-grid-section">
+    <section class="image-grid-section container">
       <div id="proekt" class="drap">
         <img src="./img/sect3/foto1.png" width="22" height="25" alt="Маленькое изображение">
         <p class="parg-drap">Галерея</p>
@@ -560,7 +559,7 @@
     </section>
   </main>
 
-  <footer id="contact" class="footer-section">
+  <footer id="contact" class="footer-section container">
     <div class="footer-pidval">
       <div class="footer-logo">
         <div class="logo-box">
