--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <section id="about" class="image-text-section container">
       <div class="image-container">
-        <img src="./img/sect1/foto21.png" width="505" height="560" alt="Изображение">
+        <img class="foto-fotik" src="./img/sect1/foto21.png" width="505" height="560" alt="Изображение">
       </div>
       <div class="text-sdf">
 
