--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
     <section id="blog" class="image-textar-section container">
       <div class="imagesis-container">
-        <img src="./img/sect3/foto11.png" width="530" height="650" alt="Изображение">
+        <img class="foto-decorations" src="./img/sect3/foto11.png" alt="Изображение">
         <div class="overlay">
           <div class="content">
             <div class="number-textar">
@@ -240,7 +240,7 @@
       </div>
       <div class="textig-container container">
         <div class="us-wir">
-          <img class="img-wir" src="./img/sect3/foto1.png" width="22" height="25" alt="Air">
+          <img class="img-wir" src="./img/sect3/foto1.png" alt="Air">
           <p class="par-wir">Чому обирають нас?</p>
         </div>
         <h2 class="new-info-wir">Кілька причин, чому варто обрати нас</h2>
